<resources>
    <string name="app_name">Mult Quest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_f_simulado">Iniciar Simulado</string>
    <string name="menu_r_questoes">Responder Questões</string>
    <string name="menu_tools">Simulados Realizados</string>
    <string name="menu_p_aprendizagem">Progresso de Apredizagem</string>
    <string name="menu_sobre">Sobre</string>
    <string name="st_tempo">Tempo: 0:00:00</string>
    <string name="menu_disciplina">Matemática</string>
    <string name="enunciado">1) Isto significa que a matemática trabalha com números, símbolos, figuras geométricas, etc. A partir de axiomas e seguindo raciocínios lógicos, a matemática analisa estruturas, magnitudes/grandezas e vínculos das entidades abstratas.</string>
    <string name="rd1">A) A matemática pode ser dividida em pura e aplicada tendo os seus elementos a intuição, analise, lógica, construção e individualização.</string>
    <string name="btnVoltar"><![CDATA[<<]]></string>
    <string name="bntAvancar"><![CDATA[>>]]></string>
    <string name="btnFinalizar">Finalizar</string>
    <string name="txtEscolha">Click e escolha suas disciplinas.</string>
    <string name="txtIniciar">Iniciar Simulado</string>
    <string name="txtLoadProgresso">Carregar Progresso</string>
    <string name="txtData">25/06/2020</string>
    <string name="txtPts">Pontos: 29/30</string>
    <string name="txtResposta">Aqui se justifica certo ou errado a alternativa escolhida.</string>
    <string name="txtTituloQuestionario">Questionário Realizado:</string>
    <string name="txtTituloSub">"Tempo de realização:"</string>
    <string name="btnSE">Carregar Simulados Realizados</string>
</resources>
